--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,6 @@ dependencies = [
     "Flask-WTF ~= 1.2.2",
     "psycopg2-binary ~= 2.9.10",
     "cryptography ~= 45.0.6",
-    "pyjwt ~= 2.10.1"
+    "pyjwt ~= 2.10.1",
+    "yarl ~= 1.22.0"
 ]
