--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,5 +16,6 @@ dependencies = [
     "psycopg2-binary ~= 2.9.10",
     "cryptography ~= 45.0.6",
     "pyjwt ~= 2.10.1",
-    "yarl ~= 1.22.0"
+    "yarl ~= 1.22.0",
+    "authlib ~= 1.6.5"
 ]
